--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -31,7 +31,14 @@
                             <outlet property="delegate" destination="0ox-Pp-UWE" id="wAx-5U-EfR"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="O79-Kx-Urf"/>
+                    <navigationItem key="navigationItem" id="O79-Kx-Urf">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="f5C-pu-od1">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="0ox-Pp-UWE" id="fwJ-G5-sK5"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cx9-Md-fzR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
